force-app/main/default/objects/Gift_Aid_Declaration__c/Gift_Aid_Declaration__c.object-meta.xml
<CustomObject>
    <description>This object is used for storing a record of the contacts gift aid declaration in.</description>
    <label>Gift Aid Declaration</label>
    <nameField>
        <displayFormat>GADID-{000000000}</displayFormat>
        <label>Gift Aid Declaration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Aid Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>