force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This confirms if the GAD is active or not</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>