force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Active_date__c.field-meta.xml
<CustomField>
    <fullName>Active_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>This is the date the GAD was made active</inlineHelpText>
    <label>Active date</label>
    <type>Date</type>
</CustomField>