force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the contact this declaration is for</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Aid Declarations</relationshipLabel>
    <relationshipName>Gift_Aid_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>