force-app/main/default/objects/Gift_Aid_Declaration__c/fields/In_Active_date__c.field-meta.xml
<CustomField>
    <fullName>In_Active_date__c</fullName>
    <inlineHelpText>This is the date the GAD was deactivated</inlineHelpText>
    <label>In Active date</label>
    <type>Date</type>
</CustomField>