force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Oldest_claim_date__c.field-meta.xml
<CustomField>
    <fullName>Oldest_claim_date__c</fullName>
    <formula>IF(Active__c,DATE(YEAR(Active_date__c )- $Setup.Gift_Aid_Configuration__c.Claim_back_year__c ,MONTH(Active_date__c )+1,DAY(Active_date__c )),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oldest claim date</label>
    <type>Date</type>
</CustomField>