force-app/main/default/objects/Gift_Aid_Declaration__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>This was the source for this declaration</inlineHelpText>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GAD_Source</valueSetName>
    </valueSet>
</CustomField>